[MN-68] test: 뉴스 목록 조회 수정 - GREEN
- article-view 응답 포함